ml-app/overlays/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlgateway
  namespace: mlops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: mlgateway
            port: 
              number: 80
      - path: /healthz
        pathType: Prefix
        backend:
          service:
            name: mlgateway
            port: 
              number: 80
